--- a/programs/bubblegum-cpi/Cargo.toml
+++ b/programs/bubblegum-cpi/Cargo.toml
@@ -17,6 +17,7 @@ default = []
 
 [dependencies]
 anchor-lang = "0.29.0"
-anchor-spl = "0.29.0"
+anchor-spl = {version="0.29.0", features = ["metadata"]}
 mpl-bubblegum = "1.2.0"
 spl-account-compression = {version = "0.3.0", features = ["cpi"]}
+url = "2.5.0"
