--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
-    "amman:start": "npx amman start"
+    "validator": "CI=1 amman start --config ./configs/validator.cjs",
+    "validator:stop": "amman stop"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
