--- a/Anchor.toml
+++ b/Anchor.toml
@@ -15,5 +15,4 @@ cluster = "Localnet"
 wallet = "keypairs/creator.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
-mint = "DEBUG='log:*,compute:*,txId:*' yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/bubblegum-cpi.ts"
+bubblegum = "DEBUG='log:*,compute:*,txId:*' yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/bubblegum-cpi.ts"
